Module 3: order state machine, stock reservation, refund flow, order history, customer cancel
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>